--- a/portfolio-react-app/package.json
+++ b/portfolio-react-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://paulasdev.github.io/myportfolio",
   "name": "portfolio-react-app",
   "version": "0.1.0",
   "private": true,
